package no.hvl.DAT109;

public class Main {


    public static void main(String[] args) {
        Grensesnitt g = new Grensesnitt(new Stigespill());
        g.start();
    }
}
