@startuml
class Brett{
    int[][] eksempelBrett
    getRuteVerdi()
    getNyPos()
}


class Terning{
    int range
    int verdi
    trillTerning()
    getVerdi()
}

class Spiller{
    int id
    int posisjon
    String navn
    endrePos()
    getNavn()
    getPosisjon()
    setPos()
}

class Stigespill{
    Brett brett
    ArrayList<Spiller> spillere
    Spiller vinner
    Terning terning

    setup()
    spill()
    spillRunde()
}

class Main{
    main()
}

class Grensesnitt{
    Stigespill stigespill
    ArrayList<Spiller> spillere
    start()
}

Stigespill <|-- Spiller
Stigespill <|-- Terning
Stigespill <|-- Brett
Grensesnitt <|-- Stigespill
Main <|-- Grensesnitt


@enduml